Resolçução Erros de versão DotNet 8.0

--- a/AgendamentoWeb-BackEnd/appsettings.json
+++ b/AgendamentoWeb-BackEnd/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=SchedulingSystemDb;Trusted_Connection=true;MultipleActiveResultSets=true"
+    "DefaultConnection": "Server=localhost;Database=SchedulingSystemDb;Uid=root;Pwd=Gwtw4598213+;"
   },
   "Jwt": {
     "Key": "sua-chave-super-secreta-muito-longa-com-pelo-menos-32-caracteres",
